Lots of changes made late at night
