# views/user.go
@@ -2,19 +2,16 @@ package views
 
 import (
 	"commitinder/models"
-
-	"golang.org/x/crypto/bcrypt"
 )
 
-type UserRegistration struct {
+type UserRequest struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
 
-func (u *UserRegistration) ToModel() (user models.User) {
+func (u *UserRequest) ToModel() (user models.User) {
 	user.Username = u.Username
-	hashedPassword, _ := bcrypt.GenerateFromPassword([]byte(u.Password), 10)
-	user.HashedPassword = string(hashedPassword)
+	user.HashedPassword = u.Password
 	user.CurrentDuelId = 1
 	return user
 }
